--- a/xard/xard.csproj
+++ b/xard/xard.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="CardType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CardRank.cs" />
     <Compile Include="CardSuit.cs" />
