--- a/xard.test/xard.test.csproj
+++ b/xard.test/xard.test.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CardComboTest.cs" />
     <Compile Include="CardTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
