--- a/xard.test/xard.test.csproj
+++ b/xard.test/xard.test.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CardComboTest.cs" />
+    <Compile Include="CardPoolTest.cs" />
     <Compile Include="CardTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
