--- a/xard/xard.csproj
+++ b/xard/xard.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Card.cs" />
     <Compile Include="CardCombo.cs" />
+    <Compile Include="CardPool.cs" />
     <Compile Include="CardType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CardRank.cs" />
