Support CardType str

--- a/xard.test/xard.test.csproj
+++ b/xard.test/xard.test.csproj
@@ -54,6 +54,7 @@
     <Compile Include="CardComboTest.cs" />
     <Compile Include="CardPoolTest.cs" />
     <Compile Include="CardTests.cs" />
+    <Compile Include="CardTypeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
